# darbiadev-shipping

./: .buildinfo  .gitignore  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  shipping_services.html
.github/workflows/: codeql-analysis.yml  gh-pages.yml  lint-test.yml  pypi-publish.yaml  python-ci.yaml
_sources/: index.rst.txt  shipping_services.rst.txt
darbiadev_shipping/: __init__.py  shipping_services.py
docs/: Makefile
docs/source/: conf.py  index.rst
src/darbiadev_shipping/: __init__.py
tests/: test_client.py
