[project]
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@darbia.dev" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
name = "darbiadev-shipping"
version = "0.4.0"
description = "darbiadev-shipping"
readme = "README.md"

[project.urls]
repository = "https://github.com/darbiadev/darbiadev-shipping"
documentation = "https://darbiadev.github.io/darbiadev-shipping/"

[project.optional-dependencies]
ups = ["darbiadev-ups<1.0.0,>=0.5.0"]
fedex = ["darbiadev-fedex<1.0.0,>=0.3.0"]
usps = ["darbiadev-usps<1.0.0,>=0.5.0"]

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pip-licenses>=3.5.3",
    "taskipy>=1.9.0",
    "pre-commit>=2.16.0",
    "pylint>=2.12.2",
    "pytest>=6.2.5",
    "pytest-cov>=3.0.0",
    "black>=21.12b0",
]
tests = [
    "pytest>=6.2.5",
]
docs = [
    "sphinx>=4.3.2",
    "sphinxcontrib-autoprogram>=0.1.7",
    "sphinx-rtd-theme>=1.0.0",
    "toml>=0.10.2",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.sphinx]
copyright = "2021, Darbia"
author = "Bradley Reynolds"
api_dir = "darbiadev_shipping"

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.pytest.ini_options]
addopts = "tests -r a -v --doctest-modules darbiadev_shipping"

[tool.pylint.format]
max-line-length = 120
