[project]
name = "darbiadev-shipping"
version = "0.5.0"
description = "darbiadev-shipping"
readme = "README.md"
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@darbia.dev" },
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.urls]
repository = "https://github.com/darbiadev/darbiadev-shipping"
documentation = "https://darbiadev.github.io/darbiadev-shipping/"

[project.optional-dependencies]
ups = [
    "darbiadev-ups<1.0.0,>=0.5.0"
]
fedex = [
    "darbiadev-fedex<1.0.0,>=0.3.0"
]
usps = [
    "darbiadev-usps<1.0.0,>=0.5.0"
]
dev = [
    "pip-tools",
    "pre-commit",
    "ruff",
]
tests = [
    "pytest",
    "pytest-randomly",
]
docs = [
    "sphinx",
    "furo",
    "sphinx-autoapi",
    "releases",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "tests -r a -v --doctest-modules src"

[tool.ruff]
line-length = 120
